--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <title>My Published Site</title>
-    <!-- <link rel="stylesheet" href="reset.css"> -->
+    <link rel="stylesheet" href="style.css">
     
   </head>
 
